# cmus-discord-rpc

./: Cargo.toml  README.md
src/: main.rs
