[package]
name = "cmus-discord-rpc"
version = "0.3.0"
authors = ["Aikufurr <ikeybill1@gmail.com>"]
keywords = ["discord", "rpc", "cmus", "lapfox"]
repository = "https://github.com/Aikufurr/cmus-discord-rpc"
edition = "2022"

[profile.release]
debug = false
lto = true
opt-level = 3
panic = "abort"

[dependencies]
env_logger = "^0.9"
log = "^0.4"
regex = "^1.1"
discord-rich-presence = {git = "https://github.com/nickofolas/discord-rich-presence"}
